[package]
name = "guardian-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardian_program"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive", "init-if-needed", "event-cpi"] }
solana-program = "=1.18.3"
paste = "1.0"
