[package]
name = "guardian-programs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "guardian_programs"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "anchor-lang/event-cpi"]
debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { version = "0.29.0", default-features = false, features = ["derive", "init-if-needed"] }
solana-program = "=1.18.3"
paste = "1.0"
